# myfoobar

./: README.md  justfile  pyproject.toml  setup.cfg
.github/workflows/: release.yml
src/myfoobar/: __init__.py  _main.py
