[metadata]
name = myfoobar
version = 0.0.1
author = Nico Schlömer
author_email = nico.schloemer@gmail.com
description = My foobar
url = https://github.com/nschloe/myfoobar/
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 5 - Production/Stable
    License :: Other/Proprietary License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
    Topic :: Utilities

[options]
package_dir =
    =src
packages = find:
install_requires =
python_requires = >=3.7

[options.packages.find]
where=src
